* Fix race condition when destructing/constructing NodePaths in thread (#1366)
* Add implementation of capsule-into-polygon collision test (#1369)
* Fix texture transforms sometimes not being flattened (#1392)
* Fix support for `#pragma include <file.glsl>` in GLSL shaders
* Fix `ShaderBuffer.prepare()` not doing anything
* Implement deepcopy for PointerToArray
* Fix bf-cbc encryption no longer working when building with OpenSSL 3.0
* PandaNode bounds_type property was erroneously marked read-only
* Fix warnings when copying OdeTriMeshGeom objects
* Fix a crash when using `Notify.set_ostream_ptr()` from Python (#1371)
* Fix GarbageReport not working with Python 3 (#1304)
* Make `mat.cols[n]` and `mat.rows[n]` assignable
* Fix `ExecutionEnvironment.args` being empty on Linux
* Add various useful functions to interrogatedb module
* Fix Python 3 issues unpacking uint types in Python 3 (#1380)
* Fix interrogate syntax error with C++11-style attributes in declarators
* Fix double-precision color values not being clamped by GeomVertexWriter
* Fix regression with BufferViewer in double-precision build (#1365)
* Fix `PandaNode.nested_vertices` not updating properly
* Prevent Panda calculating bounding volume of Geom with custom bounding volume
* Add `do_events()` and `process_event()` snake_case aliases in eventMgr
* Support second arg of None in `replace_texture()` / `replace_material()`
* Support `os.fspath()` for ConfigVariableFilename objects (#1406)
* rplight: Fix PSSM calculation failing with infinite far distance (#1397)
* Remove spurious print in `direct.showutil.Effects.createBounce()` (#1383)
* Fix assorted compiler warnings

-----------------------  RELEASE 1.10.12  -----------------------

Recommended maintenance release containing primarily bug fixes.

Windowing
* Windows: Fix origin not respected when switching to windowed mode
* macOS: Fix origin not being updated when resizing window
* macOS: Fix off-by-one errors with mouse cursor position